fix: Fix z-index for bottom drawer

--- a/react/BottomDrawer/styles.styl
+++ b/react/BottomDrawer/styles.styl
@@ -1,11 +1,12 @@
 @require 'tools/mixins'
 @require 'settings/spaces'
+@require 'settings/z-index'
 
 .with-transition
     transition transform .1s ease-out
 
 .BottomDrawer-content
-    z-index        $file-action-menu
+    z-index        $drawer-index
     position       fixed
     bottom         rem(9)
     bottom         env(safe-area-inset-bottom) // @stylint ignore
